# server

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  openapi.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  server-ci.yml
fedmcp/: artifact.py  audit.py  cli.py
src/: fed_server.py  fedmcp_server.py  main.py
tests/: example.json  test_roundtrip.py
